# SocraticAI

./: .gitignore  CLAUDE.md  LICENSE  README.md  animate_logo.py  example_usage.py  generate_logo.py  interpret.py  interpret_prompts.py  interpret_utils.py  pyproject.toml  requirements.txt  setup.py  token_counter.py  transcribe.py  transcription_utils.py
ChatDigest/: config.py  llm_utils.py  transcribe.py  utils.py
ChatDigest/generate/: insights.py  interpret.py  multi_convo_insights.py  process.py  prompts.py  takeaways.py  utils.py
ChatDigest/interpret/: insights.py  interpret.py  process.py  prompts.py  utils.py
ChatDigest/prompts/: interpret_prompts.py
SocraticAI/: config.py  llm_utils.py  utils.py
SocraticAI/agents/: utils.py
SocraticAI/cli/: commands.py  main.py
SocraticAI/core/: colored_logging.py  config.py  llm.py  utils.py
SocraticAI/generate/: interpret.py  multi_convo_insights.py  prompts.py  takeaways.py  testing.ipynb  utils.py
SocraticAI/knowledge_graph/: utils.py
SocraticAI/transcribe/: process.py  service.py  transcribe.py  utils.py
SocraticAI/visualizations/: logo_graph.ipynb
cli/: commands.py  main.py
data/agent_inputs/: all_processed.txt
data/outputs/: 2023-05-25 - Salon_Relationships_article.md  2023-05-25 - Salon_Relationships_takeaways.json  2023-05-25 - Salon_Relationships_takeaways.md  2023-06-08 - Salon_Government_article.md  2023-06-08 - Salon_Government_takeaways.json  2023-06-08 - Salon_Government_takeaways.md  2023-07-05 - Salon_creativity and expression_article.md  2023-07-05 - Salon_creativity and expression_takeaways.json  2023-07-05 - Salon_creativity and expression_takeaways.md  2023-07-12 - Salon_Guardrails_article.md  2023-07-12 - Salon_Guardrails_insights.md  2023-07-12 - Salon_Guardrails_takeaways.json  2023-07-12 - Salon_Guardrails_takeaways.md  2023-07-23 - Salon_Science_article.md  2023-07-23 - Salon_Science_takeaways.json  2023-07-23 - Salon_Science_takeaways.md  2023-07-30 - Salon_Education_article.md  2023-07-30 - Salon_Education_takeaways.json  2023-07-30 - Salon_Education_takeaways.md  2023-08-04 - Salon_physics of simulated realities_article.md  (+71 more)
notebooks/: blog_generation_test.ipynb  tmp.md
scripts/: cli.py  generate.py  transcribe.py
socraticai/: config.py
static/: animated_logo.html  logo_interactive.html  logo_tuner.html
tests/: test_anonymization.py  test_article_generator.py  test_article_generator_integration.py  test_graph_extractor.py  test_knowledge_graph.py  test_llm.py  test_llm_integration.py  test_transcript.txt
(+129 files in other folders)
